--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node server.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "server:dev": "nodemon server.js",
+    "server:prod": "set NODE_ENV=production&node server.js"
   },
   "dependencies": {
     "colors": "^1.4.0",
