--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/server.js",
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "start": "node server.js",
     "lint": "eslint .",
+    "dev:backend": "nodemon server.js",
+    "dev:frontend": "cd ../frontend && npm run dev:remote",
+    "build:frontend": "cd ../frontend && npm run build",
+    "install:all": "npm install && cd ../frontend && npm install",
     "server:dev": "nodemon server.js",
     "server:prod": "set NODE_ENV=production&node server.js"
   },
@@ -20,6 +24,7 @@
     "firebase-admin": "^13.0.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "openai": "^4.80.0",
     "puppeteer": "^22.0.0",
@@ -27,7 +32,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "concurrently": "^8.0.0",
     "eslint": "^8.56.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.0"
   }
 }
