--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-rate-limit": "^7.1.5",
     "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2",
+    "follow-redirects": "^1.15.9",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
